--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --dark-color: black;
+    --light-color: white;
+    --primary-color: pink;
+    font-family: monospace;
+}
+
+body {
+    background: var(--dark-color);
+    color: var(--light-color);
+}
+
+.topic-tag{
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: 1px solid var(--light-color);
+    display: inline;
+    font-size: 12px;
+    font-weight: 700;
+    margin-right: 4px;
+    line-height: 24px;
+}
+.btn{
+    border: none;
+    background: var(--primary-color);
+    color: var(--dark-color);
+    padding: 10px 20px;
+    font-weight: 700;
+}
