--- a/src/app/post-card/post.component.scss
+++ b/src/app/post-card/post.component.scss
@@ -11,6 +11,8 @@
     height: 70px;
     border-radius: 50%;
     overflow: hidden;
+    object-fit: cover;
+    flex-shrink: 0;
 }
 
 .poster{
@@ -23,4 +25,12 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+.tag{
+    display: flex;
+    gap: 8px;
+    border: 1px solid var(--light-color);
+    padding: 4px 8px;
+    border-radius: 4px;
 }
