--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --dark-color: black;
-    --light-color: white;
-    --primary-color: pink;
+    --dark-color: pink;
+    --light-color: black;
+    --primary-color: black;
     font-family: monospace;
 }
 
