--- a/src/app/post-card/post.component.html
+++ b/src/app/post-card/post.component.html
@@ -1,4 +1,3 @@
-@if(post) {
 <div class="post-card">
     <div class="poster">
         <img src="https://framerusercontent.com/images/CbSPyXMVIfZHAkc9RBEP7XhXEw.png" alt="Post Image"
@@ -19,9 +18,6 @@
         }
     </div>
     <div class="btn-container">
-        <button class="btn">Read More</button>
+    <a href="/post/{{post.id}}" class="btn">Read More</a>
     </div>
 </div>
-} @else {
-
-}
