--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,14 +10,10 @@
             <div class="menu-container">
                 <ul class="nav-list">
                     <li>
-                        <a routerLink="/" 
-                           routerLinkActive="active" 
-                           class="nav-link" 
-                           aria-current="page">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
-                        <a routerLink="/blog" 
-                           routerLinkActive="active" 
+                        <a href="/posts" 
                            class="nav-link">Blog</a>
                     </li>
                     <li>
