--- a/src/app/post-card/post.component.html
+++ b/src/app/post-card/post.component.html
@@ -18,6 +18,6 @@
         }
     </div>
     <div class="btn-container">
-    <a href="/post/{{post.id}}" class="btn">Read More</a>
+    <a href="/posts/{{post.id}}" class="btn">Read More</a>
     </div>
 </div>
