comment section display feature added

--- a/src/app/components-ui/header/header.component.html
+++ b/src/app/components-ui/header/header.component.html
@@ -10,16 +10,15 @@
             <div class="menu-container">
                 <ul class="nav-list">
                     <li>
-                        <a href="/">Home</a>
+                        <a href="/" class="nav-link">Home</a>
                     </li>
                     <li>
                         <a href="/posts" 
                            class="nav-link">Blog</a>
                     </li>
                     <li>
-                        <a routerLink="/about" 
-                           routerLinkActive="active" 
-                           class="nav-link">About</a>
+                        <a href="/login" 
+                           class="nav-link">login</a>
                     </li>
                 </ul>
             </div>
