--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -1,1 +1,4 @@
-<p>chatbot works!</p>
+<div class="chatbot-container">
+<input type="text" class="chatbot-input">
+<button class="chatbot-send" @click()>Send</button>
+</div>
