--- a/src/app/pages/post-page/post-page.component.html
+++ b/src/app/pages/post-page/post-page.component.html
@@ -1,9 +1,17 @@
 @if(post){
 <div>
-    <app-post [post]="post"></app-post> <!-- Используем компонент -->
+    <p>{{post.id}}</p>
+    <app-post [post]="post"></app-post>
+    @if(comments && comments.length > 0){
+    <app-comment-section [comments]="comments"></app-comment-section>
+    } @else {
+    <div>
+        <p>Нет комментариев</p>
+    </div>
+    }
 </div>
 } @else {
 <div>
-    <p>Загрузка поста...</p>
+    <p>Пост не найден</p>
 </div>
 }
