gemini API works

--- a/src/app/components-ui/header/header.component.html
+++ b/src/app/components-ui/header/header.component.html
@@ -7,6 +7,14 @@
                      class="logo-image" />
                 <span class="site-title">Nfactorial Blog</span>
             </a>
+            <div class="search-container">
+                <input type="search" 
+                       placeholder="Поиск.." 
+                       class="search-input">
+                <button type="submit" class="search-button">
+                    Найти
+                </button>
+            </div>
             <div class="menu-container">
                 <ul class="nav-list">
                     <li>
