--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -1,4 +1,9 @@
 <div class="chatbot-container">
-<input type="text" class="chatbot-input">
-<button class="chatbot-send" @click()>Send</button>
+    <input type="text" [(ngModel)]="userInput" placeholder="Enter your name">
+    <p>You typed: {{ userInput }}</p>
+    <button class="chatbot-send" (click)="sendMessage()">Send</button>
+    <div>
+        <p>Response:</p>
+        <p>{{geminiResponse}}</p>
+    </div>
 </div>
