--- a/src/app/components-ui/header/header.component.scss
+++ b/src/app/components-ui/header/header.component.scss
@@ -18,6 +18,43 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+
+    /* Search container styles */
+    .search-container {
+        display: flex;
+        align-items: stretch;
+        margin: 0 1rem;
+    }
+
+    .search-input {
+        font-family: monospace;
+        padding: 0.5rem;
+        border: 1px solid #e5e7eb;
+        border-radius: 0.375rem;
+        outline: none;
+        width: 200%;
+
+        &:focus {
+            border-color: #1a56db;
+        }
+    }
+
+    .search-button {
+        padding: 0.5rem 1rem;
+        margin-left: 0.5rem;
+        background-color: pink;
+        color: black;
+        font-family: monospace;
+        border: none;
+        border-radius: 0.375rem;
+        cursor: pointer;
+        width: auto;
+
+        &:hover {
+            background-color: #1e40af;
+        }
+    }
+
     margin: 0 auto;
     max-width: 1280px;
 }
