sending button loader

--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -1,7 +1,11 @@
 <div class="chatbot-container">
-    <input type="text" [(ngModel)]="userInput" placeholder="Enter your name">
+    <input type="text" [(ngModel)]="userInput" placeholder="Enter your question">
     <p>You typed: {{ userInput }}</p>
-    <button class="chatbot-send" (click)="sendMessage()">Send</button>
+    <button class="chatbot-send" 
+            (click)="sendMessage()" 
+            [disabled]="isLoading">
+        {{ isLoading ? 'Loading...' : 'Send' }}
+    </button>
     <div>
         <p>Response:</p>
         <p>{{geminiResponse}}</p>
