registration and login

--- a/src/app/components-ui/comment-card/comment-card.component.html
+++ b/src/app/components-ui/comment-card/comment-card.component.html
@@ -1,6 +1,8 @@
 <div class="comment-card">
-    commentId: {{comment.id}}
-    postId: {{comment.postId}}
-    {{comment.author}}
-    {{comment.content}}
+    <div class="comment-author">
+        {{comment.author}}
+    </div>
+    <div class="comment-content">
+        {{comment.content}}
+    </div>
 </div>
