--- a/src/app/components-ui/header/header.component.html
+++ b/src/app/components-ui/header/header.component.html
@@ -5,16 +5,8 @@
                 <img src="https://framerusercontent.com/images/CbSPyXMVIfZHAkc9RBEP7XhXEw.png" 
                      alt="Nfactorial Logo" 
                      class="logo-image" />
-                <span class="site-title">Nfactorial Blog</span>
+                <span class="site-title">Robotics community</span>
             </a>
-            <div class="search-container">
-                <input type="search" 
-                       placeholder="Поиск.." 
-                       class="search-input">
-                <button type="submit" class="search-button">
-                    Найти
-                </button>
-            </div>
             <div class="menu-container">
                 <ul class="nav-list">
                     <li>
