--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,14 +1,14 @@
 <div class="login-container">
     <div class="login-box">
         <h2 class="login-title">Login</h2>
-        <form class="login-form">
+        <form class="login-form" (ngSubmit)="onLogin()">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Enter your username" required>
+                <input [(ngModel)]="username" placeholder="Username" name="username" id="username" type="text"/>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" required>
+                <input [(ngModel)]="password" placeholder="Password" type="password" name="password"  id="password"  />
             </div>
             <div class="form-options">
                 <label>
@@ -16,10 +16,10 @@
                 </label>
                 <a href="#" class="forgot-password">Forgot Password?</a>
             </div>
-            <button type="submit" class="login-button">Sign In</button>
+            <button type="submit" class="login-button">Login</button>
         </form>
         <div class="register-link">
-            Don't have an account? <a href="#">Sign up</a>
+            Don't have an account? <a href="/signup">Sign up</a>
         </div>
     </div>
 </div>
